--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "joi": "^17.12.1",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
